--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@tabler/icons-react": "^2.9.0",
     "@types/styled-components": "^5.1.26",
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
